Correction des erreurs de compilation et mise à jour de l'API selon les spécifications Swagger
- Correction de la syntaxe dans AccountService.java
- Mise à jour de PagedResponse.java pour matcher les specs
- Ajout d'AccountDetails.java et suppression de l'ancien Account.java
- Mise à jour des contrôleurs et services pour utiliser les nouveaux DTOs
- Configuration OpenAPI corrigée