@@ -8,7 +8,7 @@ import io.swagger.v3.oas.models.servers.Server;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 public class OpenApiConfig {
@@ -36,6 +36,6 @@ public class OpenApiConfig {
         return new OpenAPI()
             .components(new Components())
             .info(info)
-            .servers(List.of(devServer, prodServer));
+            .servers(Arrays.asList(devServer, prodServer));
     }
 }
